# DSir

project/apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
project/apps/api/alembic/: env.py
project/apps/api/alembic/versions/: 0001_initial.py  0002_add_execution_knowledge_audit_and_rename_meta.py  0002_execution_knowledge_audit.py  0003_add_course_fields_and_lesson_progress.py  0003_course_fields.py  0004_bookmarks.py  0005_gamification_and_notes.py
project/apps/api/src/: main.py
project/apps/api/src/ai/: base.py  manager.py  prompts.py  protocols.py  providers.py
project/apps/api/src/core/: auth.py  config.py  dependencies.py  exceptions.py  pagination.py  rate_limit.py  security.py
project/apps/api/src/db/: seed.py  session.py  types.py  vector.py
project/apps/api/src/models/: __init__.py  assessment.py  audit.py  content.py  execution.py  knowledge.py  learning.py  revision.py  user.py
project/apps/api/src/sandbox/: interfaces.py  providers.py  registry.py
project/apps/api/src/schemas/: ai.py  auth.py  bookmark.py  common.py  content.py  enrollment.py  execution.py  gamification.py  lesson.py  mastery.py  notes.py  profile.py  project.py  rag.py  revision.py  roadmap.py  submission.py  user.py
project/apps/api/src/services/: audit.py  execution.py  gamification.py  knowledge_graph.py  mastery.py  rag.py  (+1 more)
project/apps/api/tests/: .test_db.sqlite  conftest.py  test_ai.py  test_api_endpoints.py  test_knowledge_graph.py  test_main.py  test_mastery.py  test_rag.py  test_rate_limit.py  test_revision.py  test_sandbox.py  test_worker.py
(+107 files in other folders)
